Fix sponsor heading contrast issue

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -212,6 +212,7 @@
   font-size: 1.2rem;
   margin-bottom: 1rem;
   font-style: italic;
+  color: #000;
 }
 .sponsor {
   background-color: #000;
