--- a/styles/candidates.module.css
+++ b/styles/candidates.module.css
@@ -294,6 +294,7 @@
   font-size: 1.2rem;
   margin-bottom: 1rem;
   font-style: italic;
+  color: #000;
 }
 .sponsor {
   background-color: #000;
